--- a/package.json
+++ b/package.json
@@ -165,7 +165,8 @@
     "uuid": "3.3.2",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.0",
-    "webpack-manifest-plugin": "1.3.2"
+    "webpack-manifest-plugin": "1.3.2",
+    "xterm": "3.10.1"
   },
   "browserslist": "chrome 61",
   "jest": {
