--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dist:all": "cross-env GENERATE_SOURCEMAP=false npm run build && electron-builder -mwl -c.extraMetadata.main=build/electron.js",
     "publish": "yarn dist --publish always",
     "publish:all": "yarn dist:all --publish always",
-    "test": "node scripts/test.js --maxWorkers=2 --env=node",
+    "test": "node scripts/test.js --maxWorkers=2 --env=node --verbose=false",
     "coverage": "yarn test --coverage",
     "report-coverage": "yarn coverage && codecov",
     "flow": "flow",
@@ -90,8 +90,8 @@
     "electron": "4.0.0",
     "electron-builder": "20.28.4",
     "electron-log": "2.2.17",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.6.0",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.8.0",
     "enzyme-to-json": "3.3.4",
     "eslint": "5.7.0",
     "eslint-config-react-app": "3.0.4",
