WIP: Added eslint-jest & fixed issues (except snapshots)

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "coverage": "yarn test --coverage",
     "report-coverage": "yarn coverage && codecov",
     "flow": "flow",
-    "lint": "eslint src/**/*.js config/**/*.js",
+    "lint": "eslint src/**/*.js src/**/*.snap config/**/*.js",
     "prettier": "prettier --write",
     "detect-port": "cross-env ./node_modules/detect-port-alt/bin/detect-port 3000",
     "precommit": "lint-staged",
@@ -98,6 +98,7 @@
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "3.0.0",
     "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "22.2.2",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
